Making good progress on the NodeJS Auth server.

--- a/package.json
+++ b/package.json
@@ -1,12 +1,26 @@
 {
-    "name": "auth_server",
-    "version": "1.0.0",
-    "description": "A NodeJS server with authentication",
-    "main": "index.js",
-    "scripts": {
-        "start": "node index.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "author": "David Clark (SealedSaint)",
-    "license": "MIT"
+  "name": "auth_server",
+  "version": "1.0.0",
+  "description": "A NodeJS server with authentication",
+  "main": "index.js",
+  "scripts": {
+    "dev": "nodemon index.js",
+    "start": "node index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "David Clark (SealedSaint)",
+  "license": "MIT",
+  "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.17.1",
+    "express": "^4.15.2",
+    "jwt-simple": "^0.5.1",
+    "mongoose": "^4.8.6",
+    "morgan": "^1.8.1",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.2.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.11.0"
+  }
 }
